Update rcon implementation; add JVM GC flag defaults for J8